# ffmpeg_practice

./: .clang-format  .gitignore  README.md  install.sh
toys/learn-ffmpeg-libav-the-hard-way/: 00_hello_world.cpp  02_remuxing.cpp  CMakeLists.txt  README.md  run_00.sh
toys/learn-ffmpeg-libav-the-hard-way/utils/: ff_logging.cpp
toys/learn-ffmpeg-libav-the-hard-way/utils/include/: ff_headers.h  ff_logging.h
toys/learn_from_leixiaohua_blog/: CMakeLists.txt  README.md  data_proc.cpp  data_proc.py
toys/learn_from_leixiaohua_blog/data_proc/: image_proc.hpp  simple_h264_stream_parser.hpp
